ontology-mapper.css
html {
  height: 100%;
}

body {
  margin: 0;
  height: 100%;
  background-color: white;
}

h1, h2, h3 {
  font-size: medium;
  margin: 0;
}

#layout {
  table-layout: fixed;
  overflow: hidden;
  white-space: nowrap;
  border-collapse: collapse;
  width: 100%;
  height: 100%;
}

#layout td {
  border: 1px solid black;
  padding: 0;
}

#window-heading, #trees-heading, #details-heading {
  height: 2em;
  background-color: #ccc;
}

#window-heading td:nth-child(2) {
  text-align: center;
}

#spinner {
  font-family: monospace;
  background-color: yellow;
  color: black;
  font-size: x-large;
}

#trees td, #details td {
  height: calc(50vh - 3em - 3px);
  vertical-align: top;
}

#trees > td > div, #details > td > dl {
  height: calc(50vh - 3em - 3px);
  overflow: auto;
}

#details dd > input[type=text] {
  width: calc(100% - 6em);
}

#details li > input[type=text] {
  width: calc(100% - 4em);
}

#your-roles > li > input[type=text] {
  width: calc(100% - 20em);
}

#your-examples {
  /* so that the width of the input isn't shortened by the bullet */
  list-style-position: inside;
  padding-left: 1.5em;
}

#other-mapped-trips-concepts {
  width: calc(100% - 2em) !important;
  margin-left: 1em;
}

div.word-counts {
  display: inline-block;
  vertical-align: top;
  width: 2em;
}

div.word-counts ul {
  margin: 0;
  padding: 0;
}

div.word-counts li {
  list-style-type: none;
  text-align: right;
  height: 24px; /* match jsTree */
  margin: 0;
  padding: 0;
  color: blue;
}

div.jstree {
  display: inline-block;
  width: calc(100% - 2em);
}

dl {
  margin: 0;
}

dt {
  font-weight: bold;
}

dt.inline {
  display: inline;
}

dt:after {
  content: ': ';
}

dd {
  display: inline;
  margin-left: 0;
}

td.map {
  width: 20%;
}

/* FIXME this leaves a 4-6px gap below the svg (and sometimes to the right,
 * depending on the overall viewport height!?!), but if I "fix" that it throws
 * the whole table out of whack. Huh?
 */
td.map svg {
  width: calc(20vw - 4px);
  height: calc(50vh - 3em - 7px);
}

#select-concept-mapping-button {
  width: 2.5em;
  padding: 0px;
}

.ui-selectmenu-text, #select-concept-mapping-menu li.ui-menu-item {
  text-align: right;
}

.ui-corner-bottom {
  border-radius: 0px;
}

button, input[type=submit], #select-concept-mapping-button {
  border-style: outset;
  border-width: 2px;
  border-color: #ddd;
  background-color: #ddd;
  border-radius: 0px;
}
button:active, #select-concept-mapping-button:active {
  border-style: inset;
}

input[type=text] {
  border: 1px solid black;
  padding: 1px;
}

input.search {
  width: calc(100% - 2px);
  height: 2em;
  border: 0;
}

#your-ontology-prefix {
  width: calc(100% - 13em);
  height: 2em;
  border: 0;
}

select {
  /* if we don't specify this, Firefox on Linux completely changes the
   * appearance of the selection box when we go from invalid to valid (built-in
   * to Gtk+?)
   */
  background-color: white;
}

input:invalid, select:invalid {
  background-color: pink;
}

.invisible {
  display: none;
}

.template {
  display: none;
}

.comment {
  white-space: normal;
  width: calc(100% - 2em - 4px);
  margin-left: 1em;
}

#trips-words {
  display: inline-block;
  white-space: normal;
  width: calc(100% - 6em);
  vertical-align: top;
}

.handle {
  fill-color: black;
  stroke: #444;
}

line {
  stroke-width: 0.3em;
  stroke: black;
}

line.selected {
  stroke: rgb(0,159,255) !important;
}

line.inherited {
  stroke: #666;
}

line.selected.inherited {
  stroke: #66f !important;
}

line.hidden {
  stroke-opacity: 0.25;
}

line.optional {
  stroke-dasharray: 5;
}

ul.selectable {
  list-style-position: inside;
  padding-left: 1.5em;
}

ul.selectable li {
  list-style-type: circle;
}

ul.selectable li.selected {
  list-style-type: disc;
  /* copied from a.jstree-default.jstree-clicked */
  background: #beebff;
  border-radius: 2px;
  box-shadow: inset 0 0 1px #999;
}

ul.selectable li.controls, li.controls {
  list-style-type: square;
}

li.inherited {
  color: #666;
}

